The gain and frequency variations are captured in the model.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -68,8 +68,8 @@
 \input{./secs/3_2-norm_omega.tex}
 %===============================================================================
 \newpage
-\section{BLDC Motor with Propeller Model}
-\input{./secs/bldc_prop_model.tex}
+\section{BLDC Motor with Propeller Model -- Parameter Estimation}
+\input{./secs/4_1-bldc_prop_model.tex}
 %===============================================================================
 \newpage
 \section{Dynamic Model Parameter Identification}
