Done with the input model.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -71,6 +71,7 @@
 \section{BLDC Motor with Propeller Model -- Parameter Estimation}
 \input{./secs/4_0-bldc_prop_model.tex}
 \input{./secs/4_1-small_perturbation_model.tex}
+\input{./secs/4_2-non_linear_model.tex}
 
 %===============================================================================
 \newpage
