--- a/secs/4_1-small_perturbation_model.tex
+++ b/secs/4_1-small_perturbation_model.tex
@@ -30,3 +30,6 @@ In case of using $u_p$ as input:
 \end{align*}
 
 Thus this results in variation of the static gain alone.
+
+
+\subsubsection{Model Parameter Estimation}
