Added the results of the small-perturbation experiments.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -77,6 +77,11 @@
 \newpage
 \section{Conclusion: Model and Model Parameters}
 \subsection{Parametric Form}
+
+\newpage
+\section{Appendix}
+\input{secs/appendix.tex}
+
 %===============================================================================
 %\newpage
 %\section{Gyroscopic Effects of Propeller Inertia}
