Done with the results of small perturbation experiments.

--- a/secs/4_1-small_perturbation_model.tex
+++ b/secs/4_1-small_perturbation_model.tex
@@ -71,7 +71,7 @@ The $V_{in}$ and $K$ plot demonstrates the validity of their relationship when t
 
 The variation of cut-off frequency with nominal rpm gives the esitmates of propeller moment of inertia and the damping as follows:
 \begin{align*}
-    J &= 3.2238 \times 10^{-6} \, Kg m^2\\
+    J &= 3.2238 \times 10^{-6} \, Kg .m^2\\
     b_m &= 0
 \end{align*}
 
@@ -101,7 +101,7 @@ The variation of cut-off frequency with nominal rpm gives the esitmates of prope
         $C_D$ & $3.6088 \times 10^{-08}$ & $N.m/(rad/s)^2$ \\
         $b_m$ & $0.0$                    & $N.m/(rad/s)$\\
         $M_f$ & $1.3135 \times 10^{-3}$  & $N.m$\\
-        $J$   & $3.2238 \times 10^{-6}$  & $Kg m^2$ \\\hline \hline
+        $J$   & $3.2238 \times 10^{-6}$  & $Kg .m^2$ \\\hline \hline
     \end{tabular}
     \caption{Summary of parameter estimates from staic and small-perturbation experiments}
 \end{table}
