--- a/secs/4_0-bldc_prop_model.tex
+++ b/secs/4_0-bldc_prop_model.tex
@@ -11,7 +11,7 @@ Intoducing the input definition into the BLDC-motor model with propeller:
     \implies \frac{V_{in}}{\hat V_{in}} = 1 - \delta v
     \implies \lr{1 - \frac{V_{in}}{\hat V_{in}}} = \delta v
 \end{align*}
-\begin{equation}
+\begin{equation}\label{eqn::nl_model}
     J \dot \omega + b_m \omega + C_D \omega^2 + M_f \delta v = V_{in} b_m u_\omega + V_{in}^2 (1 + \delta v) C_D u_\omega^2
 \end{equation}
 
