--- a/secs/apx-small_perturbation_ID_results.tex
+++ b/secs/apx-small_perturbation_ID_results.tex
@@ -1,3 +1,33 @@
+\subsubsection{Experiment Details}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{c c c c}
+        \hline \hline
+        Expt. & $u_{p_0}$ $(\mu s)$& $u_{\omega_0}$ $(rad/(s.V))$ & $\omega_0$ $(rad/s)$ \\ \hline \hline
+            1 & 1250      &  22.7035       &  347.1147   \\
+            2 & 1300      &  26.1848       &  405.6932   \\
+            3 & 1350      &  29.6660       &  460.4567   \\
+            4 & 1400      &  33.1472       &  515.9106   \\
+            5 & 1450      &  36.6284       &  587.6871   \\
+            6 & 1500      &  40.1096       &  646.5961   \\
+            7 & 1550      &  43.5908       &  703.7016   \\
+            8 & 1600      &  47.0720       &  756.4896   \\
+            9 & 1650      &  50.5532       &  806.9497   \\
+           10 & 1700      &  54.0344       &  850.6007   \\
+           11 & 1750      &  57.5156       &  896.7785   \\
+           \hline \hline
+    \end{tabular}
+    \caption{Nominal Inputs}
+    \label{tab::nom_in}
+\end{table}
+
+\begin{align*}
+   f_s &= 250 \, Hz & & \text{[Sampling Frequency]}\\
+   t_f &= 50 \,s    & & \text{[Final Time]}\\
+   N_p &= 10        & & \text{[Number of Periods]}
+\end{align*}
+
+
 
 \subsubsection{Frequency Domain Validation}
 %===============================================================================
