--- a/secs/4_1-small_perturbation_model.tex
+++ b/secs/4_1-small_perturbation_model.tex
@@ -83,7 +83,8 @@ We have the model parameters identified:
         $M_f$ & $1.3135 \times 10^{-3}$  & $N.m$\\
         $J$   & $3.2238 \times 10^{-6}$  & $Kg .m^2$ \\\hline \hline
     \end{tabular}
-    \caption{Summary of parameter estimates from staic and small-perturbation experiments}
+    \caption{Summary of parameter estimates from static and small-perturbation experiments}
+    \label{tab::parm_ests}
 \end{table}
 
 Assuming $\delta v = 0$ we have the non-linear model of the system eqn~\ref{eqn::nl_model}:
