Added the parameter variances.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -74,21 +74,18 @@
 %===============================================================================
 \newpage
 \part{Control}
-
 \input{secs/5-control_model.tex}
-%===
+%===============================================================================
+\newpage
 \section{Adaptive Robust Control Designs}
-\subsection{Direct Adaptive Robust Control Design (ARC)}
-\subsection{Direct-Indirect Adaptive Robust Control Design (DIARC)}
-%===
-\section{Disturbance Observer based Controller Designs}
-\subsection{DOB Design}
-\subsection{Active Disturbance Rejection Controller Design (ADRC)}
-
-\section{Comparative Study}
-
-
-
+\input{secs/6_0-ARC_design.tex}
+%===============================================================================
+% \newpage
+% \section{Disturbance Observer based Controller Designs}
+% \input{secs/7_0-DOB_design.tex}
+% %===============================================================================
+% \newpage
+% \section{Comparative Study}
 
 %===============================================================================
 \newpage
