--- a/secs/1_4-aero_coeff.tex
+++ b/secs/1_4-aero_coeff.tex
@@ -53,17 +53,18 @@ The aerodynamic coefficients are estimated from the static measuremnts using lea
     \end{minipage}
 \end{figure}
 
-The moment data has more variation from model due to the unmodelled aerodynamic effects such as aerodynamic-flutter. Thus we have the estimates of force coefficients:
+The moment data has more variation from model due to the un-modelled aerodynamic effects such as aerodynamic-flutter. Thus, we have the estimates of force coefficients:
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{c l}
+    \begin{tabular}{c l l c}
         \hline \hline
-        Parameter & Value \\ \hline \hline
-        $C_T$ & $7.2581 \times 10^{-06}$ $N/(rad/s)^2$  \\
-        $C_D$ & $3.6088 \times 10^{-08}$ $N.m/(rad/s)^2$ \\
-        $b_f$ & $0.0$ $N.m/(rad/s)$\\
-        $M_f$ & $1.3135 \times 10^{-3}$ $N.m$\\ \hline \hline
+        Parameter & Value & & $\sigma$            \\ \hline \hline
+        $C_T$ & $7.2581 \times 10^{-06}$ &$N/(rad/s)^2$  &$4.4522 \times 10^{-8}$\\
+        $C_D$ & $3.6088 \times 10^{-08}$ &$N.m/(rad/s)^2$& $1.3964 \times 10^{-9}$\\
+        $b_f$ & $0.0$                    &$N.m/(rad/s)$  &$5.0422 \times 10^{-6}$\\
+        $M_f$ & $1.3135 \times 10^{-3}$  &$N.m$          &$4.5277 \times 10^{-3}$\\
+        \hline \hline
     \end{tabular}
     \caption{Estimates Force coefficients}
 \end{table}
